updated swager and cheaters
